Change required Spyder version

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,7 +27,7 @@ requirements:
   run:
     - line_profiler
     - python
-    - spyder >=3
+    - spyder >=4,<5
 
 test:
   # On Linux, importing requires an X server
