--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,11 +22,12 @@ requirements:
     - setuptools
   host:
     - pip
-    - python
+    - python >=3.7
   run:
     - line_profiler
-    - python
-    - spyder >=4,<5
+    - python >=3.7
+    - qtawesome
+    - spyder >=5.2,<6
 
 test:
   # On Linux, importing requires an X server
@@ -47,4 +48,5 @@ about:
 extra:
   recipe-maintainers:
     - ccordoba12
+    - dalthviz
     - jitseniesen
